Fix align text hero

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -23,10 +23,13 @@
       }
       .paragraph {
         display: block;
-        margin-left: 40px;
         text-align: center;
         text-transform: uppercase;
         font-weight: bold;
+        width: 100%;
+        max-width: 180px;
+        margin: 0 auto;
+        margin-right: 0;
       }
     }
   }
